--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "homepage": "https://github.com/kube/expand#readme",
   "devDependencies": {
+    "async": "^1.4.2",
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.3",
+    "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.0",
     "mocha": "^2.2.5",
