Update package.json for Travis

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tab expander in Javascript",
   "main": "./lib/expand.js",
   "scripts": {
+    "postinstall": "tsd reinstall -so",
     "test": "gulp test"
   },
   "repository": {
