--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "async": "^1.4.2",
     "chai": "^3.2.0",
+    "coveralls": "^2.11.4",
     "gulp": "^3.9.0",
     "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.3",
